# openframeworks-openFrameworks

./: .gitignore  CMakeLists.txt  build.sh  readme.adoc  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
addons/: CMakeLists.txt
addons/ofxAssimpModelLoader/: CMakeLists.txt
addons/ofxAssimpModelLoader/src/: CMakeLists.txt
addons/ofxKinect/src/extra/: CMakeLists.txt
addons/ofxOpenCv/: addon_config.mk
dev/docs/: cmake.adoc
examples/: CMakeLists.txt
examples/3d/: CMakeLists.txt
examples/3d/3DPrimitivesExample/: CMakeLists.txt
examples/3d/advanced3dExample/: CMakeLists.txt
examples/3d/advanced3dExample/src/: CMakeLists.txt
examples/3d/assimp3DModelLoaderExample/: CMakeLists.txt
examples/3d/cameraParentingExample/: CMakeLists.txt
examples/3d/cameraRibbonExample/: CMakeLists.txt
examples/3d/easyCamExample/: CMakeLists.txt
examples/3d/meshFromCameraExample/: CMakeLists.txt
examples/3d/normalsExample/: CMakeLists.txt
examples/3d/ofBoxExample/: CMakeLists.txt
examples/3d/ofNodeExample/src/: CMakeLists.txt
examples/3d/orientationExample/: CMakeLists.txt
examples/3d/pathsToMeshesExample/: CMakeLists.txt
examples/3d/pointCloudExample/: CMakeLists.txt
examples/3d/pointPickerExample/: CMakeLists.txt
examples/3d/quaternionArcballExample/: CMakeLists.txt
examples/3d/quaternionArcballExample/src/: CMakeLists.txt
examples/3d/quaternionLatLongExample/: CMakeLists.txt
libs/: CMakeLists.txt
libs/openFrameworks/: CMakeLists.txt
libs/openFrameworks/3d/: CMakeLists.txt
libs/openFrameworks/app/: CMakeLists.txt  ofAppEGLWindow.cpp
libs/openFrameworks/communication/: CMakeLists.txt  ofArduino.h
libs/openFrameworks/events/: CMakeLists.txt
libs/openFrameworks/gl/: CMakeLists.txt
libs/openFrameworks/graphics/: CMakeLists.txt
libs/openFrameworks/math/: CMakeLists.txt
libs/openFrameworks/sound/: CMakeLists.txt
libs/openFrameworks/types/: CMakeLists.txt
libs/openFrameworks/utils/: CMakeLists.txt
libs/openFrameworks/video/: CMakeLists.txt
