add_subdirectory(ofxAccelerometer)
add_subdirectory(ofxAndroid)
add_subdirectory(ofxAssimp)
add_subdirectory(ofxAssimpModelLoader)
add_subdirectory(ofxEmscripten)
add_subdirectory(ofxGPS)
add_subdirectory(ofxGui)
add_subdirectory(ofxiOS)
add_subdirectory(ofxKinect)
add_subdirectory(ofxNetwork)
add_subdirectory(ofxOpenCv)
add_subdirectory(ofxOsc)
add_subdirectory(ofxPoco)
add_subdirectory(ofxSvg)
add_subdirectory(ofxThreadedImageLoader)
add_subdirectory(ofxUnitTests)
add_subdirectory(ofxVectorGraphics)
add_subdirectory(ofxXmlSettings)
