cmake_minimum_required(VERSION 3.31.10)

project(examples CXX)

add_subdirectory(3d)
add_subdirectory(android)
add_subdirectory(communication)
add_subdirectory(computer_vision)
add_subdirectory(events)
add_subdirectory(gl)
add_subdirectory(gles)
add_subdirectory(graphics)
add_subdirectory(gui)
add_subdirectory(input_output)
add_subdirectory(ios)
add_subdirectory(math)
add_subdirectory(shader)
add_subdirectory(sound)
add_subdirectory(strings)
add_subdirectory(templates)
add_subdirectory(threads)
add_subdirectory(tvOS)
add_subdirectory(video)
add_subdirectory(windowing)
